--- a/packages/explorer/.env.development
+++ b/packages/explorer/.env.development
@@ -4,7 +4,7 @@ REACT_APP_RINKEBY_CONTROLLER_ADDRESS=0x37dC71366Ec655093b9930bc816E16e6b587F968
 
 # If you're running the graph node locally set REACT_APP_LIVEPEER_SUBGRAPH to http://localhost:8000/subgraphs/name/livepeer/graphql.
 # Otherwise, you can set it to the public Livepeer subgraph at https://thegraph.livepeer.org/subgraphs/name/livepeer/graphql. 
-REACT_APP_LIVEPEER_SUBGRAPH=
+REACT_APP_LIVEPEER_SUBGRAPH=https://thegraph.livepeer.org/subgraphs/name/livepeer/graphql
 
 ## Miner depends of these vars
 REACT_APP_LAMBDA_API=
