--- a/packages/subgraph/package.json
+++ b/packages/subgraph/package.json
@@ -11,7 +11,7 @@
     "deploy": "graph deploy subgraph.yaml --verbosity debug --node http://127.0.0.1:8020/ --ipfs /ip4/127.0.0.1/tcp/5001 --subgraph-name livepeer"
   },
   "devDependencies": {
-    "@graphprotocol/graph-cli": "graphprotocol/graph-cli#jannis/ipfs-auth",
+    "@graphprotocol/graph-cli": "0.5.1",
     "@graphprotocol/graph-ts": "0.5.0"
   },
   "workspaces": {
