--- a/packages/subgraph/subgraph.yaml
+++ b/packages/subgraph/subgraph.yaml
@@ -3,6 +3,28 @@ schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum/contract
+    name: BondingManager_deprecated
+    source:
+      address: "511bc4556d823ae99630ae8de28b9b80df90ea2e"
+      abi: BondingManager
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.1
+      language: wasm/assemblyscript
+      file: ./mappings/bondingManager.ts
+      entities:
+        - Transcoder
+        - Reward
+        - Delegator
+      abis:
+        - name: BondingManager
+          file: ./abis/BondingManager_deprecated.json
+      eventHandlers:
+        - event: Bond(address,address)
+          handler: bond_deprecated
+        - event: Unbond(address,address)
+          handler: unbond_deprecated
+  - kind: ethereum/contract
     name: BondingManager
     source:
       address: "511bc4556d823ae99630ae8de28b9b80df90ea2e"
@@ -15,6 +37,7 @@ dataSources:
       entities:
         - Transcoder
         - Reward
+        - Delegator
       abis:
         - name: BondingManager
           file: ./abis/BondingManager.json
@@ -51,6 +74,7 @@ dataSources:
         - Transcoder
         - Reward
         - Round
+        - Delegator
       abis:
         - name: RoundsManager
           file: ./abis/RoundsManager.json
