--- a/packages/subgraph/subgraph.yaml
+++ b/packages/subgraph/subgraph.yaml
@@ -16,6 +16,7 @@ dataSources:
         - Transcoder
         - Reward
         - Delegator
+        - Earnings
       abis:
         - name: BondingManager
           file: ./abis/BondingManager_deprecated.json
@@ -38,6 +39,7 @@ dataSources:
         - Transcoder
         - Reward
         - Delegator
+        - Earnings
       abis:
         - name: BondingManager
           file: ./abis/BondingManager.json
