--- a/packages/subgraph/tsconfig.json
+++ b/packages/subgraph/tsconfig.json
@@ -1,6 +1,1 @@
-{
-  "extend": "./node_modules/@graphprotocol/graph-ts/tsconfig.json",
-  "compilerOptions": {
-    "types": ["@graphprotocol/graph-ts"]
-  }
-}
+// placeholder
